Add basic endpoint to list states
