# api/reporter-service.pb.go
@@ -14,8 +14,13 @@ It has these top-level messages:
 	RegisterStateResponse
 	RecordStateRequest
 	RecordStateResponse
+	ListStatesRequest
+	ListStatesResponse
 	StateContext
 	StateReport
+	StateList
+	StateListComponent
+	StateListState
 */
 package api
 
@@ -106,11 +111,37 @@ func (m *RecordStateResponse) String() string            { return proto.CompactT
 func (*RecordStateResponse) ProtoMessage()               {}
 func (*RecordStateResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{3} }
 
+type ListStatesRequest struct {
+}
+
+func (m *ListStatesRequest) Reset()                    { *m = ListStatesRequest{} }
+func (m *ListStatesRequest) String() string            { return proto.CompactTextString(m) }
+func (*ListStatesRequest) ProtoMessage()               {}
+func (*ListStatesRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
+
+type ListStatesResponse struct {
+	List *StateList `protobuf:"bytes,1,opt,name=list" json:"list,omitempty"`
+}
+
+func (m *ListStatesResponse) Reset()                    { *m = ListStatesResponse{} }
+func (m *ListStatesResponse) String() string            { return proto.CompactTextString(m) }
+func (*ListStatesResponse) ProtoMessage()               {}
+func (*ListStatesResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{5} }
+
+func (m *ListStatesResponse) GetList() *StateList {
+	if m != nil {
+		return m.List
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*RegisterStateRequest)(nil), "api.RegisterStateRequest")
 	proto.RegisterType((*RegisterStateResponse)(nil), "api.RegisterStateResponse")
 	proto.RegisterType((*RecordStateRequest)(nil), "api.RecordStateRequest")
 	proto.RegisterType((*RecordStateResponse)(nil), "api.RecordStateResponse")
+	proto.RegisterType((*ListStatesRequest)(nil), "api.ListStatesRequest")
+	proto.RegisterType((*ListStatesResponse)(nil), "api.ListStatesResponse")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -124,7 +155,9 @@ const _ = grpc.SupportPackageIsVersion3
 // Client API for ReporterService service
 
 type ReporterServiceClient interface {
+	RegisterState(ctx context.Context, in *RegisterStateRequest, opts ...grpc.CallOption) (*RegisterStateResponse, error)
 	RecordState(ctx context.Context, in *RecordStateRequest, opts ...grpc.CallOption) (*RecordStateResponse, error)
+	ListStates(ctx context.Context, in *ListStatesRequest, opts ...grpc.CallOption) (*ListStatesResponse, error)
 }
 
 type reporterServiceClient struct {
@@ -133,6 +166,15 @@ type reporterServiceClient struct {
 
 func NewReporterServiceClient(cc *grpc.ClientConn) ReporterServiceClient {
 	return &reporterServiceClient{cc}
+}
+
+func (c *reporterServiceClient) RegisterState(ctx context.Context, in *RegisterStateRequest, opts ...grpc.CallOption) (*RegisterStateResponse, error) {
+	out := new(RegisterStateResponse)
+	err := grpc.Invoke(ctx, "/api.ReporterService/RegisterState", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
 }
 
 func (c *reporterServiceClient) RecordState(ctx context.Context, in *RecordStateRequest, opts ...grpc.CallOption) (*RecordStateResponse, error) {
@@ -144,14 +186,43 @@ func (c *reporterServiceClient) RecordState(ctx context.Context, in *RecordState
 	return out, nil
 }
 
+func (c *reporterServiceClient) ListStates(ctx context.Context, in *ListStatesRequest, opts ...grpc.CallOption) (*ListStatesResponse, error) {
+	out := new(ListStatesResponse)
+	err := grpc.Invoke(ctx, "/api.ReporterService/ListStates", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Server API for ReporterService service
 
 type ReporterServiceServer interface {
+	RegisterState(context.Context, *RegisterStateRequest) (*RegisterStateResponse, error)
 	RecordState(context.Context, *RecordStateRequest) (*RecordStateResponse, error)
+	ListStates(context.Context, *ListStatesRequest) (*ListStatesResponse, error)
 }
 
 func RegisterReporterServiceServer(s *grpc.Server, srv ReporterServiceServer) {
 	s.RegisterService(&_ReporterService_serviceDesc, srv)
+}
+
+func _ReporterService_RegisterState_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RegisterStateRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ReporterServiceServer).RegisterState(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ReporterService/RegisterState",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ReporterServiceServer).RegisterState(ctx, req.(*RegisterStateRequest))
+	}
+	return interceptor(ctx, in, info, handler)
 }
 
 func _ReporterService_RecordState_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
@@ -172,13 +243,39 @@ func _ReporterService_RecordState_Handler(srv interface{}, ctx context.Context, 
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ReporterService_ListStates_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListStatesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ReporterServiceServer).ListStates(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ReporterService/ListStates",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ReporterServiceServer).ListStates(ctx, req.(*ListStatesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _ReporterService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "api.ReporterService",
 	HandlerType: (*ReporterServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
+			MethodName: "RegisterState",
+			Handler:    _ReporterService_RegisterState_Handler,
+		},
+		{
 			MethodName: "RecordState",
 			Handler:    _ReporterService_RecordState_Handler,
+		},
+		{
+			MethodName: "ListStates",
+			Handler:    _ReporterService_ListStates_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
@@ -190,26 +287,32 @@ func init() {
 }
 
 var fileDescriptor0 = []byte{
-	// 327 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x9c, 0x51, 0x4d, 0x4e, 0x72, 0x31,
-	0x14, 0xcd, 0xe3, 0x4b, 0xf8, 0x92, 0xe2, 0xef, 0x53, 0x02, 0x21, 0x0e, 0xcc, 0x1b, 0x91, 0x18,
-	0x5f, 0x05, 0x66, 0x32, 0x32, 0xec, 0xa0, 0x2c, 0x80, 0x94, 0xc7, 0xe5, 0xd9, 0x28, 0xbd, 0xb5,
-	0xbd, 0x10, 0x12, 0xc3, 0x44, 0x97, 0xe0, 0xc0, 0x85, 0xb9, 0x05, 0x17, 0x62, 0x68, 0xab, 0xa8,
-	0xc4, 0x81, 0x0e, 0xef, 0xb9, 0xe7, 0x9c, 0x9e, 0xde, 0xc3, 0xfa, 0xa5, 0xa2, 0xeb, 0xf9, 0x38,
-	0x2f, 0x70, 0xc6, 0xa7, 0x73, 0x07, 0x16, 0xc7, 0x48, 0xaa, 0x70, 0xdc, 0x82, 0x41, 0x4b, 0x60,
-	0xb9, 0x34, 0xea, 0x63, 0x38, 0x77, 0x60, 0x17, 0xaa, 0x80, 0xdc, 0x58, 0x24, 0x4c, 0xff, 0x49,
-	0xa3, 0x5a, 0x27, 0x25, 0x62, 0x79, 0x0b, 0x9e, 0x27, 0xb5, 0x46, 0x92, 0xa4, 0x50, 0xbb, 0x40,
-	0x69, 0xf5, 0x7e, 0xe5, 0x1f, 0x45, 0x17, 0x3f, 0x89, 0x1c, 0x49, 0x02, 0x47, 0x16, 0xe4, 0x8c,
-	0x17, 0xa8, 0xa7, 0xaa, 0x0c, 0x8a, 0x6c, 0xc9, 0x8e, 0x05, 0x94, 0xca, 0x11, 0xd8, 0xe1, 0x9a,
-	0x23, 0xe0, 0x6e, 0x0e, 0x8e, 0xd2, 0x33, 0xf6, 0xbf, 0x40, 0x4d, 0xb0, 0xa4, 0x66, 0x72, 0x9a,
-	0xb4, 0x6b, 0xdd, 0xc3, 0x5c, 0x1a, 0x95, 0x7b, 0xce, 0x20, 0x2c, 0xc4, 0x3b, 0x23, 0xed, 0xb1,
-	0xdd, 0xe0, 0x3d, 0x0a, 0xde, 0xcd, 0x8a, 0x97, 0xec, 0xe5, 0x01, 0xcd, 0x07, 0x1e, 0x15, 0x3b,
-	0x61, 0x0c, 0x53, 0xd6, 0x60, 0xf5, 0x6f, 0x2f, 0x3b, 0x83, 0xda, 0x41, 0x76, 0xc3, 0x52, 0x01,
-	0x05, 0xda, 0xc9, 0xdf, 0x03, 0xb5, 0x59, 0x35, 0x5c, 0x26, 0x26, 0x39, 0xd8, 0x70, 0x85, 0xc7,
-	0x45, 0xdc, 0x67, 0x75, 0x76, 0xf4, 0xe5, 0xb1, 0x90, 0xa1, 0xfb, 0x9c, 0xb0, 0x7d, 0x11, 0x6f,
-	0x3b, 0x0c, 0xd5, 0xa5, 0x8f, 0x09, 0xab, 0x7d, 0xe2, 0xa6, 0x0d, 0x6f, 0xba, 0x1d, 0xb5, 0xd5,
-	0xdc, 0x5e, 0xc4, 0xaf, 0x5d, 0x3d, 0xbc, 0xbc, 0x3e, 0x55, 0xfa, 0x59, 0x87, 0x2f, 0x3a, 0xfc,
-	0x3e, 0xa6, 0x5d, 0xb7, 0x65, 0x50, 0x83, 0xa6, 0xd5, 0x06, 0xf3, 0x85, 0x8d, 0xd4, 0x64, 0xc5,
-	0xad, 0xf7, 0xb9, 0x8c, 0x81, 0xc7, 0x55, 0xdf, 0x5b, 0xef, 0x2d, 0x00, 0x00, 0xff, 0xff, 0x0d,
-	0x8f, 0xf7, 0x3f, 0x80, 0x02, 0x00, 0x00,
+	// 427 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x9c, 0x92, 0xbf, 0x6e, 0x13, 0x41,
+	0x10, 0xc6, 0x75, 0x09, 0x0a, 0xd2, 0x84, 0x98, 0x64, 0x43, 0x62, 0x73, 0xa2, 0x40, 0x57, 0x45,
+	0x42, 0xdc, 0x91, 0xb8, 0x41, 0x71, 0x05, 0x6e, 0x28, 0xa8, 0xd6, 0xa2, 0xb6, 0xd6, 0xe7, 0xf1,
+	0xb1, 0xe2, 0xbc, 0x7b, 0xec, 0x8e, 0x2d, 0x4b, 0xc8, 0x05, 0xf0, 0x02, 0x48, 0x3c, 0x1a, 0xaf,
+	0xc0, 0x83, 0xa0, 0xdb, 0x5d, 0x73, 0xfe, 0x47, 0x61, 0xca, 0xf9, 0xe6, 0x9b, 0x99, 0x9f, 0x66,
+	0x06, 0x7a, 0x85, 0xa4, 0x8f, 0xb3, 0x51, 0x9a, 0xeb, 0x69, 0x36, 0x99, 0x59, 0x34, 0x7a, 0xa4,
+	0x49, 0xe6, 0x36, 0x33, 0x58, 0x69, 0x43, 0x68, 0x32, 0x51, 0xc9, 0xbf, 0xc1, 0x4b, 0x8b, 0x66,
+	0x2e, 0x73, 0x4c, 0x2b, 0xa3, 0x49, 0xb3, 0x63, 0x51, 0xc9, 0xf8, 0x59, 0xa1, 0x75, 0x51, 0xa2,
+	0xf3, 0x09, 0xa5, 0x34, 0x09, 0x92, 0x5a, 0x59, 0x6f, 0x89, 0xbb, 0x07, 0xf5, 0x0f, 0x45, 0xaf,
+	0xfe, 0x55, 0x64, 0x49, 0x10, 0x5a, 0x32, 0x28, 0xa6, 0x59, 0xae, 0xd5, 0x44, 0x16, 0xbe, 0x22,
+	0x59, 0xc0, 0x13, 0x8e, 0x85, 0xb4, 0x84, 0x66, 0x50, 0x7b, 0x38, 0x7e, 0x9e, 0xa1, 0x25, 0xf6,
+	0x02, 0x1e, 0xe6, 0x5a, 0x11, 0x2e, 0xa8, 0x13, 0x3d, 0x8f, 0x6e, 0x4e, 0xef, 0x2e, 0x52, 0x51,
+	0xc9, 0xd4, 0x79, 0xfa, 0x3e, 0xc1, 0x57, 0x0e, 0xd6, 0x85, 0x33, 0xdf, 0x7b, 0xe8, 0x7b, 0x77,
+	0x8e, 0x5c, 0x49, 0x2b, 0xf5, 0x6a, 0xda, 0x77, 0x2a, 0x7f, 0xe4, 0x43, 0x1f, 0x25, 0x6d, 0xb8,
+	0xda, 0x9a, 0x6c, 0x2b, 0xad, 0x2c, 0x26, 0x9f, 0x80, 0x71, 0xcc, 0xb5, 0x19, 0xff, 0x3f, 0xd0,
+	0x0d, 0x9c, 0xf8, 0xcd, 0x04, 0x92, 0xf3, 0xc6, 0xcb, 0x9d, 0xce, 0x43, 0x3e, 0xb9, 0x82, 0xcb,
+	0x8d, 0x61, 0x81, 0xe1, 0x12, 0x2e, 0xde, 0x4b, 0x4b, 0x4e, 0xb4, 0x01, 0x21, 0x79, 0x0d, 0x6c,
+	0x5d, 0xf4, 0x56, 0x96, 0xc0, 0x83, 0x52, 0xda, 0x15, 0x55, 0xab, 0x99, 0x54, 0x7b, 0xb9, 0xcb,
+	0xdd, 0x7d, 0x3d, 0x86, 0xc7, 0x3c, 0x9c, 0x6a, 0xe0, 0x3f, 0x81, 0xfd, 0x88, 0xe0, 0x6c, 0x63,
+	0x01, 0xec, 0xa9, 0xab, 0xdd, 0x77, 0x8e, 0x38, 0xde, 0x97, 0x0a, 0xac, 0xef, 0xbe, 0xfd, 0xfa,
+	0xfd, 0xf3, 0xe8, 0x6d, 0x72, 0x9b, 0xcd, 0x6f, 0xb3, 0x2f, 0x61, 0x05, 0xf5, 0x0b, 0x54, 0x5a,
+	0xa1, 0xa2, 0x65, 0xa3, 0xb9, 0x2f, 0x18, 0xca, 0xf1, 0x32, 0xcb, 0x0d, 0x0a, 0xc2, 0xfb, 0xcd,
+	0xb3, 0xb1, 0xef, 0x11, 0x9c, 0xae, 0x6d, 0x83, 0xb5, 0xc3, 0xd4, 0xed, 0x63, 0xc4, 0x9d, 0xdd,
+	0x44, 0x80, 0x79, 0xe3, 0x60, 0x7a, 0x07, 0xc1, 0x18, 0xd7, 0xe7, 0x3e, 0x9c, 0x84, 0x7d, 0x00,
+	0x68, 0xd6, 0xcc, 0xae, 0xdd, 0xa8, 0x9d, 0x63, 0xc4, 0xed, 0x1d, 0x3d, 0x10, 0x5c, 0x3b, 0x82,
+	0x73, 0xd6, 0xaa, 0x09, 0x44, 0x59, 0x86, 0xdf, 0x1f, 0x9d, 0xb8, 0x87, 0xef, 0xfe, 0x09, 0x00,
+	0x00, 0xff, 0xff, 0x02, 0x01, 0x0e, 0xd9, 0xb9, 0x03, 0x00, 0x00,
 }
