# api/reporter.pb.go
@@ -7,6 +7,7 @@ package api
 import proto "github.com/golang/protobuf/proto"
 import fmt "fmt"
 import math "math"
+import stream "github.com/fuserobotics/statestream"
 
 // Reference imports to suppress errors if they are not otherwise used.
 var _ = proto.Marshal
@@ -36,9 +37,62 @@ func (m *StateReport) String() string            { return proto.CompactTextStrin
 func (*StateReport) ProtoMessage()               {}
 func (*StateReport) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{1} }
 
+type StateList struct {
+	Components []*StateListComponent `protobuf:"bytes,1,rep,name=components" json:"components,omitempty"`
+}
+
+func (m *StateList) Reset()                    { *m = StateList{} }
+func (m *StateList) String() string            { return proto.CompactTextString(m) }
+func (*StateList) ProtoMessage()               {}
+func (*StateList) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{2} }
+
+func (m *StateList) GetComponents() []*StateListComponent {
+	if m != nil {
+		return m.Components
+	}
+	return nil
+}
+
+type StateListComponent struct {
+	Name   string            `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	States []*StateListState `protobuf:"bytes,2,rep,name=states" json:"states,omitempty"`
+}
+
+func (m *StateListComponent) Reset()                    { *m = StateListComponent{} }
+func (m *StateListComponent) String() string            { return proto.CompactTextString(m) }
+func (*StateListComponent) ProtoMessage()               {}
+func (*StateListComponent) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{3} }
+
+func (m *StateListComponent) GetStates() []*StateListState {
+	if m != nil {
+		return m.States
+	}
+	return nil
+}
+
+type StateListState struct {
+	Name   string         `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	Config *stream.Config `protobuf:"bytes,2,opt,name=config" json:"config,omitempty"`
+}
+
+func (m *StateListState) Reset()                    { *m = StateListState{} }
+func (m *StateListState) String() string            { return proto.CompactTextString(m) }
+func (*StateListState) ProtoMessage()               {}
+func (*StateListState) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{4} }
+
+func (m *StateListState) GetConfig() *stream.Config {
+	if m != nil {
+		return m.Config
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*StateContext)(nil), "api.StateContext")
 	proto.RegisterType((*StateReport)(nil), "api.StateReport")
+	proto.RegisterType((*StateList)(nil), "api.StateList")
+	proto.RegisterType((*StateListComponent)(nil), "api.StateListComponent")
+	proto.RegisterType((*StateListState)(nil), "api.StateListState")
 }
 
 func init() {
@@ -46,17 +100,24 @@ func init() {
 }
 
 var fileDescriptor1 = []byte{
-	// 182 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x44, 0x8e, 0xc1, 0xae, 0x82, 0x30,
-	0x10, 0x45, 0xc3, 0x7b, 0x89, 0xca, 0x88, 0x9b, 0xae, 0x30, 0xd1, 0xc4, 0xe0, 0xc6, 0x15, 0x2c,
-	0xf8, 0x04, 0x17, 0xc6, 0xa5, 0xf8, 0x01, 0xa4, 0x94, 0x8a, 0xd5, 0xd0, 0x69, 0xda, 0x21, 0xf1,
-	0xf3, 0x0d, 0x13, 0xd4, 0xe5, 0xbd, 0xf7, 0xe4, 0xcc, 0x40, 0xd9, 0x19, 0xba, 0x0f, 0x4d, 0xae,
-	0xb0, 0x2f, 0x6e, 0x43, 0xd0, 0x1e, 0x1b, 0x24, 0xa3, 0x42, 0xe1, 0xb5, 0x43, 0x4f, 0xda, 0x17,
-	0xd2, 0x99, 0x6f, 0xc8, 0x9d, 0x47, 0x42, 0xf1, 0x2f, 0x9d, 0xc9, 0x4e, 0x90, 0x5c, 0x49, 0x92,
-	0x3e, 0xa2, 0x25, 0xfd, 0x22, 0xb1, 0x81, 0x58, 0x61, 0xef, 0xd0, 0x6a, 0x4b, 0x69, 0xb4, 0x8b,
-	0x0e, 0x71, 0xf5, 0x2b, 0xc4, 0x1a, 0x16, 0x61, 0xa4, 0x6b, 0xd3, 0xa6, 0x7f, 0x3c, 0xce, 0x39,
-	0x9f, 0xdb, 0xec, 0x02, 0x4b, 0x16, 0x55, 0x7c, 0x44, 0x6c, 0x01, 0x1e, 0x01, 0x6d, 0xcd, 0xf3,
-	0x47, 0x34, 0x36, 0x0c, 0x89, 0x3d, 0xac, 0xfa, 0xd0, 0x39, 0xa9, 0x9e, 0x13, 0x31, 0xda, 0x92,
-	0x2a, 0x99, 0x4a, 0x86, 0x9a, 0x19, 0xff, 0x59, 0xbe, 0x03, 0x00, 0x00, 0xff, 0xff, 0x76, 0x0c,
-	0xcd, 0x6e, 0xde, 0x00, 0x00, 0x00,
+	// 293 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x74, 0x91, 0x5d, 0x4b, 0xfb, 0x30,
+	0x14, 0xc6, 0xd9, 0xf6, 0x67, 0x7f, 0x7b, 0x5a, 0x77, 0x11, 0x2f, 0xac, 0xa2, 0x30, 0x2a, 0xc8,
+	0x40, 0x48, 0x65, 0xbb, 0xf0, 0x03, 0x54, 0x10, 0x61, 0x37, 0x56, 0xbc, 0x1e, 0x69, 0x97, 0xd5,
+	0x28, 0x4d, 0x42, 0x72, 0x06, 0x7e, 0x7c, 0xe9, 0xe9, 0x8b, 0x0e, 0xf5, 0x2e, 0x79, 0x9e, 0xe7,
+	0xfc, 0x38, 0x2f, 0xb0, 0xaa, 0x14, 0xbe, 0xee, 0x0b, 0x5e, 0x9a, 0x3a, 0xdd, 0xed, 0xbd, 0x74,
+	0xa6, 0x30, 0xa8, 0x4a, 0x9f, 0x3a, 0x69, 0x8d, 0x43, 0xe9, 0x52, 0x61, 0xd5, 0xf0, 0xe1, 0xd6,
+	0x19, 0x34, 0x6c, 0x22, 0xac, 0x3a, 0xbf, 0xfd, 0xab, 0xd2, 0xa3, 0x40, 0xe9, 0xd1, 0x49, 0x51,
+	0xa7, 0xa5, 0xd1, 0x3b, 0x55, 0xb5, 0x65, 0xc9, 0x03, 0x44, 0xcf, 0x8d, 0x97, 0x19, 0x8d, 0xf2,
+	0x03, 0xd9, 0x05, 0x04, 0xa5, 0xa9, 0xad, 0xd1, 0x52, 0x63, 0x3c, 0x9a, 0x8f, 0x16, 0x41, 0xfe,
+	0x25, 0xb0, 0x33, 0x38, 0x22, 0xd2, 0x46, 0x6d, 0xe3, 0x31, 0x99, 0xff, 0xe9, 0xff, 0xb8, 0x4d,
+	0x9e, 0x20, 0x24, 0x50, 0x4e, 0x6d, 0xb1, 0x4b, 0x80, 0x37, 0x6f, 0xf4, 0x86, 0xec, 0x1e, 0xd4,
+	0x28, 0x14, 0x62, 0x57, 0x70, 0x5c, 0xfb, 0xca, 0x8a, 0xf2, 0xbd, 0x4b, 0x34, 0xb4, 0x28, 0x8f,
+	0x3a, 0x91, 0x42, 0xc9, 0x3d, 0x04, 0xf4, 0x58, 0x2b, 0x8f, 0xec, 0x0e, 0x60, 0xe8, 0xc3, 0xc7,
+	0xa3, 0xf9, 0x64, 0x11, 0x2e, 0x4f, 0xb9, 0xb0, 0x8a, 0x0f, 0x99, 0xac, 0xf7, 0xf3, 0x6f, 0xd1,
+	0xe4, 0x05, 0xd8, 0xcf, 0x04, 0x63, 0xf0, 0x4f, 0x8b, 0xba, 0xef, 0x8c, 0xde, 0xec, 0x06, 0xa6,
+	0xed, 0x9e, 0xe2, 0x31, 0xe1, 0x4f, 0x0e, 0xf1, 0xed, 0x78, 0x5d, 0x24, 0x59, 0xc3, 0xec, 0xd0,
+	0xf9, 0x15, 0x79, 0x0d, 0xd3, 0x76, 0xdd, 0x34, 0x60, 0xb8, 0x9c, 0xf1, 0xf6, 0x08, 0x3c, 0x23,
+	0x35, 0xef, 0xdc, 0x62, 0x4a, 0xd7, 0x58, 0x7d, 0x06, 0x00, 0x00, 0xff, 0xff, 0x7b, 0xd9, 0x8f,
+	0x76, 0xfb, 0x01, 0x00, 0x00,
 }
